Amelioration de l'affichage des variables

--- a/python/session-2016-03-idf/1_fonctions/quizz/4-listes.html
+++ b/python/session-2016-03-idf/1_fonctions/quizz/4-listes.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-		<title>Quizz Python Partie 2</title>
+		<title>Quizz Python Partie 4</title>
 		<style type="text/css">   
 			<!--  
 				body { 
@@ -95,8 +95,7 @@
 		<div class="question">On veut modifier l'objet <i>liste</i> pour que sa valeur devienne [0, 1, 4, 2, 3]. Que faut-il faire ? <i>(plusieurs réponses possibles)</i></div>
 		<div class="reponses" >
 			On se donne la variable suivante :
-			<br>
-			<b><i>liste = [0, 1, 2, 3]</i></b>
+			<b><pre>liste = [0, 1, 2, 3]</pre></b>
 		</div>
 		<div class="reponses">
 			<input type="checkbox" id="Q1reponse1">&nbsp;&nbsp;&nbsp;
@@ -138,9 +137,8 @@
 		<div class="question">On souhaite extraire et retourner le premier élément 0, tout en la retirant de la liste. Que faut-il faire ? <i>(plusieurs réponses possibles)</i></div>
 		<div class="reponses" >
 			On se donne la variable suivante :
-			<br>
-			<b><i>liste = [0, 1, 2, 3]</i></b>
-			<br>Plus précisément on veut affecter à la variable <i>suivant</i> la valeur 0 de telle sorte qu'après l'exécution, <i>liste</i> ne contienne plus que [1, 2, 3]
+			<b><pre>liste = [0, 1, 2, 3]</pre></b>
+			Plus précisément on veut affecter à la variable <i>suivant</i> la valeur 0 de telle sorte qu'après l'exécution, <i>liste</i> ne contienne plus que [1, 2, 3]
 		</div>
 		<div class="reponses">
 			<input type="checkbox" id="Q2reponse1">&nbsp;&nbsp;&nbsp;
@@ -182,8 +180,7 @@
 		<div class="question">On veut trier la liste en ordre décroissant et en place, c'est-à-dire sans dupliquer la liste ni ses éléments. Que faut-il faire ? <i>(plusieurs réponses possibles)</i></div>
 		<div class="reponses" >
 			On se donne la variable suivante :
-			<br>
-			<b><i>liste = [1, 0, 3, 2]</i></b>
+			<b><pre>liste = [1, 0, 3, 2]</pre></b>
 		</div>
 		<div class="reponses">
 			<input type="checkbox" id="Q3reponse1">&nbsp;&nbsp;&nbsp;
