Corrections sur les quizz d'introduction

--- a/python/session-2016-03-idf/1_fonctions/quizz/2-typesNum.html
+++ b/python/session-2016-03-idf/1_fonctions/quizz/2-typesNum.html
@@ -151,14 +151,13 @@ LABEL.none {
 		<br>
 
 		<!-- Question 3 -->
-		<div class="question">Peut-on utiliser des caractères accentués dans les noms de variables ? <i>(une seule réponse possible)</i></div>
+		<div class="question">Quelles sont les expressions qui retournent la valeur True ? <i>(une seule réponse possible)</i></div>
 		<div class="reponses">
-			<input type="radio" id="Q3reponse1" name="Q2">&nbsp;&nbsp;&nbsp;
+			<input type="checkbox" id="Q3reponse1" >&nbsp;&nbsp;&nbsp;
 			<label onmouseover=this.className="reponse" onmouseout=this.className="none" for="Q3reponse1" id="label_Q3reponse1" name="Q3true" >type(2 ** 16) == type(2 ** 8)&nbsp;</label>
 		</div>
 		<div class="reponses">
-			<input type="radio" id="Q3reponse2
-			<" name="Q2">&nbsp;&nbsp;&nbsp;
+			<input type="checkbox" id="Q3reponse2" >&nbsp;&nbsp;&nbsp;
 			<label onmouseover=this.className="reponse" onmouseout=this.className="none" for="Q3reponse2" id="label_Q3reponse2" >type(2 ** 200) == type(2 ** 8)</label>
 		</div>
 		<div class="reponses" id="boutton_Q3">
