--- a/python/session-2016-03-idf/1_fonctions/quizz/1-variables.html
+++ b/python/session-2016-03-idf/1_fonctions/quizz/1-variables.html
@@ -133,17 +133,17 @@ LABEL.none {
 		<div class="question">Peut-on utiliser des caractères accentués dans les noms de variables ? <i>(une seule réponse possible)</i></div>
 		<div class="reponses">
 			<input type="radio" id="Q2reponse1" name="Q2">&nbsp;&nbsp;&nbsp;
-			<label onmouseover=this.className="reponse" onmouseout=this.className="none" for="Q2reponse1" id="label_Q2reponse1" >oui</label>
+			<label onmouseover=this.className="reponse" onmouseout=this.className="none" for="Q2reponse1" id="label_Q2reponse1" name="Q2true" >oui</label>
 		</div>
 		<div class="reponses">
 			<input type="radio" id="Q2reponse2" name="Q2">&nbsp;&nbsp;&nbsp;
-			<label onmouseover=this.className="reponse" onmouseout=this.className="none" for="Q2reponse2" id="label_Q2reponse2" name="Q2true" >non</label>
+			<label onmouseover=this.className="reponse" onmouseout=this.className="none" for="Q2reponse2" id="label_Q2reponse2" >non</label>
 		</div>
 		<div class="reponses" id="boutton_Q2">
 			<a onclick="javascript:afficher_cb_soluce('Q2');">Afficher la solution</a>
 		</div>
 		<div class="reponses" id="Q2soluce"  style="display: none;">
-			<b>On ne peut utiliser des accents que dans les commentaires, et à l'intérieur des chaînes de caractères.</b>
+			<b>EN PythonOn ne peut utiliser des accents que dans les commentaires, et à l'intérieur des chaînes de caractères.<br>En Python 3, les accents sont acceptés dans les noms de variables. Cependant cette possibilité est vivement déconseillée</b>
 		</div>
 		<br>
 		
